--- a/classA/classA.css
+++ b/classA/classA.css
@@ -72,5 +72,9 @@ input{
     font-size: 20px;
 }
 
-
+.Generate_IP:hover{
+    cursor: pointer;
+    background-color: antiquewhite;
+    text-decoration: underline;
+}
 
