--- a/classA/classA.css
+++ b/classA/classA.css
@@ -77,4 +77,47 @@ input{
     background-color: antiquewhite;
     text-decoration: underline;
 }
+@media (max-width: 768px) {
+    * {
+        font-size: 20px;
+    }
+
+    .title {
+        font-size: 24px;
+    }
+
+    button, .answer-button {
+        padding: 15px;
+        width: 100%;
+        font-size: 18px;
+    }
+
+    #answer-1, #answer-7, #answer-2, #answer-3, #answer-4, #answer-5, #answer-6 {
+        font-size: 16px;
+        padding: 15px;
+    }
+}
+
+@media (max-width: 480px) {
+    * {
+        font-size: 18px;
+    }
+
+    button, .answer-button {
+        padding: 10px;
+        width: 100%;
+        font-size: 16px;
+    }
+
+    #answer-1, #answer-7, #answer-2, #answer-3, #answer-4, #answer-5, #answer-6 {
+        font-size: 14px;
+        padding: 10px;
+    }
+}
+.image-3 {
+    max-width: 100%;
+    height: auto; 
+    display: block; 
+    margin: auto; 
+}
 
